--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yaw Bia | Research Scientist</title>
-    <meta name="description" content="Academic portfolio of Yaw Bia" />
+    <title>Yaw Bia | Protein Engineer </title>
+    <meta name="description" content="Research portfolio of Yaw Bia" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
   <script type="importmap">
 {
